fdo#72267 boolean_test is subsumed by general case "foo IS [NOT] bar"

Change-Id: Ie9666b1c8878dd26593629b4b64d74b7448f98c1